# hackathon_1-physical_ai_humanoid_robotics_textbook

./: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  vercel.json
backend/: .gitignore  DEPLOYMENT.md  README.md  VALIDATION_README.md  check_agent_health.py  check_openai_agents.py  index.py  main.py  pyproject.toml  requirements.txt  test_rag_flow.py  test_rag_ingestion.py  test_validation.py  test_validation_extended.py  vercel.json
backend/agent/: __init__.py  rag_agent.py  system_prompt.py
backend/api/: __init__.py  app.py  models.py  router.py
backend/config/: __init__.py  settings.py
backend/services/: __init__.py  context_injector.py  qdrant_service.py
backend/tests/: __init__.py
backend/utils/: __init__.py  embeddings.py
backend/validation/: __init__.py  error_handling.py  metadata_validator.py  models.py  pipeline_validator.py  qdrant_utils.py  query_processor.py  report_generator.py  retrieval.py
backend/website_ingestion_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: intro.md
my-book-chatbot/: .gitignore  main.py  pyproject.toml
my-book-chatbot/.specify/memory/: constitution.md
my-book-chatbot/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
my-book-chatbot/backend/: main.py  requirements.txt
my-book-chatbot/docs/capstone/: 5-4-object-recognition-manipulation.md
my-book-chatbot/docs/module1/: 1-3-python-agents-ros-controllers.md  1-4-understanding-urdf-humanoids.md
my-book-chatbot/frontend/: next.config.ts  package-lock.json  package.json
(+139 files in other folders)
