[project]
name = "my-book-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.0",
    "langchain-text-splitters>=1.0.0",
    "litellm>=1.80.9",
    "openai-agents[litellm]>=0.6.2",
    "openai-chatkit>=1.4.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.38.0",
]
